--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -1,5 +1,5 @@
 .name{
-    font-family: oswald, Calibri, 'Trebuchet MS', sans-serif;
+    font-family: oswald;
     opacity: 0;
     z-index: 3;
     position: fixed;
