--- a/css/not_prefixed/style.css
+++ b/css/not_prefixed/style.css
@@ -81,6 +81,18 @@ section {
   display: none;
 }
 
+.loader {
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: red;
+}
+
 .name {
   font-family: oswald;
   opacity: 0;
