--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -1,3 +1,15 @@
+.loader{
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: red;
+}
+
 .name{
     font-family: oswald;
     opacity: 0;
