--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -7,7 +7,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: red;
+    background: $color-bg;
+    &__wheel{
+        margin: 220px auto;
+        text-align: center;
+        width: max-content;
+        height: max-content;
+        animation: nav-btn 500ms both infinite alternate ease-in-out;
+        &--img{
+            animation: loader 800ms infinite both linear;
+        }
+        
+    }
 }
 
 .name{
