--- a/scss/utils/utils.scss
+++ b/scss/utils/utils.scss
@@ -12,6 +12,7 @@ $color-primary: rgb(223, 255, 236);
 $color-secondary: #50f79b;
 $color-tertiary: rgb(17, 17, 17);
 $color-bg: rgb(10, 10, 10);
+$color-link: #A5FFCA;
 
 $width-mail: 60px;
 $height-mail: 40px;
