--- a/css/not_prefixed/style.css
+++ b/css/not_prefixed/style.css
@@ -123,6 +123,11 @@ section {
   color: #50f79b;
   text-align: start;
 }
+@media screen and (max-width: 620px) {
+  .name {
+    margin: 4px 15px;
+  }
+}
 .name--animation {
   animation: opacity-animation 300ms both;
 }
@@ -143,7 +148,6 @@ section {
   bottom: auto;
   width: 105%;
   min-width: 1600px;
-  max-width: 1600px;
 }
 @media screen and (max-width: 1199px) {
   .bg__img {
@@ -162,7 +166,7 @@ section {
 }
 @media screen and (max-width: 620px) {
   .bg__img {
-    display: none;
+    right: -30%;
   }
 }
 .bg__img--1 {
@@ -178,6 +182,13 @@ section {
   animation: bg-animation 40s 30s infinite both linear;
 }
 
+@media screen and (max-width: 620px) {
+  .levels {
+    transform: scale(0.86);
+    position: relative;
+    bottom: 5px;
+  }
+}
 .levels__html-level {
   margin-top: 5px;
   display: inline-block;
@@ -377,13 +388,22 @@ section {
   align-items: center;
   margin-top: 140px;
   margin-bottom: 5px;
-  min-width: 620px;
+}
+@media screen and (max-width: 620px) {
+  .header {
+    margin-bottom: 0;
+  }
 }
 .header__titre {
   font-family: oswald;
   font-size: 5rem;
   text-align: center;
   color: #50f79b;
+}
+@media screen and (max-width: 620px) {
+  .header__titre {
+    font-size: 4rem;
+  }
 }
 
 .nav {
@@ -392,7 +412,6 @@ section {
   padding-top: 17px;
   padding-bottom: 17px;
   width: 100%;
-  min-width: 620px;
   max-height: 77px;
   min-height: 77px;
   background: #0a0a0a;
@@ -406,7 +425,7 @@ section {
   color: #dfffec;
   font-family: oswald;
   width: max-content;
-  height: 70px;
+  height: max-content;
   border-radius: 50px;
   border: 2px solid #50f79b;
   margin: auto;
@@ -415,16 +434,22 @@ section {
   text-align: center;
   transition: color 200ms 100ms, background 200ms, transform 200ms;
 }
+@media screen and (max-width: 1199px) {
+  .nav__btn-menu {
+    display: block;
+  }
+}
+@media screen and (max-width: 620px) {
+  .nav__btn-menu {
+    font-size: 2.5rem;
+    margin-top: 5px;
+  }
+}
 .nav__btn-menu:hover {
   cursor: pointer;
   color: #0a0a0a;
   background: #50f79b;
   transform: scale(1.1);
-}
-@media screen and (max-width: 1199px) {
-  .nav__btn-menu {
-    display: block;
-  }
 }
 .nav__container {
   margin: auto;
@@ -452,6 +477,12 @@ section {
   margin: 7px;
   border-radius: 7px;
 }
+@media screen and (max-width: 620px) {
+  .nav__container--menu .nav__btn {
+    font-size: 1.66rem;
+    min-width: 150px;
+  }
+}
 .nav__btn {
   text-align: center;
   font-family: oswald;
@@ -474,7 +505,6 @@ section {
 .section-bloc {
   z-index: 1;
   width: 60%;
-  min-width: 550px;
   margin: 130px auto;
   margin-bottom: 50px;
   padding: 30px;
@@ -526,6 +556,11 @@ section {
   font-size: 3rem;
   color: #50f79b;
 }
+@media screen and (max-width: 620px) {
+  .text__titre {
+    font-size: 2.5rem;
+  }
+}
 .text__img {
   margin-bottom: 10px;
   width: 230px;
@@ -533,6 +568,11 @@ section {
 .text__p {
   font-size: 1.5rem;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 620px) {
+  .text__p {
+    font-size: 1.25rem;
+  }
 }
 .text__p--strong {
   font-weight: bold;
@@ -546,6 +586,11 @@ section {
   font-family: droid-serif;
   font-size: 1rem;
   font-style: normal;
+}
+@media screen and (max-width: 620px) {
+  .text__p--low {
+    font-size: 0.84rem;
+  }
 }
 .text__p--link {
   cursor: pointer;
