--- a/css/not_prefixed/style.css
+++ b/css/not_prefixed/style.css
@@ -439,6 +439,7 @@ section {
 @media screen and (max-width: 620px) {
   .nav {
     min-height: 50px;
+    max-height: 50px;
   }
 }
 .nav.nav--animation {
