--- a/scss/utils/utils.scss
+++ b/scss/utils/utils.scss
@@ -9,8 +9,8 @@
 }
 
 $color-primary: rgb(223, 255, 236);
-$color-secondary: #50f79b;
-$color-tertiary: rgb(17, 17, 17);
+$color-secondary: #80eeb1;
+$color-tertiary: rgba(17, 17, 17, 0.7);
 $color-bg: rgb(10, 10, 10);
 $color-link: #A5FFCA;
 
@@ -97,9 +97,10 @@ $breakpoints:(
     }
 }
 
-@keyframes nav-border{
+@keyframes border-animation{
     100%{
         border-bottom: 2px solid $color-secondary;
+        background: darken($color-tertiary, 20%);
     }
 }
 
