--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -4,6 +4,7 @@
     border: 0;
     font-weight: normal;
     user-select: none;
+    list-style-type: none;
     ::selection{
         background: $color-primary;
     }
