--- a/scss/layouts/layouts.scss
+++ b/scss/layouts/layouts.scss
@@ -4,13 +4,13 @@
     align-items: center;
     margin-top: 140px;
     margin-bottom: 5px;
-    @include mini-only{
+    @include mobile-only{
         margin-bottom: 0;
     }
     &__titre{
         font-family: oswald;
         font-size: 5rem;
-        @include mini-only{
+        @include mobile-only{
             font-size: 3.5rem;
         }
         text-align: center;
@@ -26,7 +26,7 @@
     width: 100%;
     max-height: 77px;
     min-height: 77px;
-    @include mini-only{
+    @include mobile-only{
         min-height: 50px;
         max-height: 50px;
     }
@@ -48,7 +48,7 @@
         margin: 3px auto;
         padding: 0 10px 0 10px;
         font-size: 3rem;
-        @include mini-only{
+        @include mobile-only{
             font-size: 2rem;
             margin-top: 0px;
         }
@@ -82,7 +82,7 @@
                 min-width: 190px;
                 margin: 7px;
                 border-radius: 7px;
-                @include mini-only{
+                @include mobile-only{
                     font-size: 1.34rem;
                     min-width: 120px;
                 }
@@ -111,9 +111,12 @@
 
 .section-bloc{
     z-index: 1;
-    width: 60%;
+    width: 50%;
     margin: 130px auto;
-    @include mini-only{
+    @include desktop-only{
+        width: 60%;
+    }
+    @include mobile-only{
         margin: 100px auto;
     }
     margin-bottom: 50px;
@@ -146,7 +149,8 @@
             @include desktop-only{
                 width: 90%;
             }
-            @include mini-only{}
+            @include mobile-only{}
+            max-width: 250px;
             min-width: 200px;
         }
         &:nth-child(4){
@@ -175,22 +179,25 @@
     &__titre{
         font-family: oswald;
         font-size: 3rem;
-        @include mini-only{
+        @include mobile-only{
             font-size: 2rem;
         }
         color: $color-secondary;
     }
     &__img{
-        margin-bottom: 10px;
+        margin: 10px;
         width: 230px;
-        @include mini-only{
+        @include mobile-only{
             width: 165px;
-        }  
+        }
+        @include mini-only{
+            width: 150px;
+        }
     }
     &__p{
-        font-size: 1.5rem;
-        @include mini-only{
-            font-size: 1rem;
+        font-size: 1.6rem;
+        @include mobile-only{
+            font-size: 1.1rem;
         }
         margin-bottom: 10px;
         &--strong{
@@ -203,9 +210,9 @@
         }
         &--low{
             font-family: droid-serif;
-            font-size: 1.0rem;
-            @include mini-only{
-                font-size: 0.66rem;
+            font-size: 1.1rem;
+            @include mobile-only{
+                font-size: 0.73rem;
             }
             font-style: normal;
         }
